--- a/MangaDownloader.Desktop/MangaDownloader.Desktop.csproj
+++ b/MangaDownloader.Desktop/MangaDownloader.Desktop.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
@@ -17,7 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AngleSharp" Version="1.1.2" />
+		<PackageReference Include="AngleSharp" Version="1.3.0" />
 		<PackageReference Include="Avalonia" Version="11.1.0" />
 		<PackageReference Include="Avalonia.Desktop" Version="11.1.0" />
 		<PackageReference Include="Avalonia.ReactiveUI" Version="11.1.0" />
@@ -30,5 +30,9 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
 		<PackageReference Include="xunit" Version="2.9.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\MangaDownloader.Rule\MangaDownloader.Rule.csproj" />
 	</ItemGroup>
 </Project>
