jsonによるselector memberの読み込みとImageDownloaderクラスのhtml解析を廃止し、ruleベースのhtml解析方法に移行する準備

--- a/MangaDownloader.Desktop/MangaDownloader.Desktop.csproj
+++ b/MangaDownloader.Desktop/MangaDownloader.Desktop.csproj
@@ -35,4 +35,8 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\MangaDownloader.Rule\MangaDownloader.Rule.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Assets\Plugins\" />
+	</ItemGroup>
 </Project>
